# nix-query

./: Cargo.toml  Readme.md  crates.nix  flake.nix  rust-toolchain.toml
nix_lib/: extract.nix  hm.nix
src/: cli.rs  lib.rs  main.rs
